cmake_minimum_required (VERSION 2.6)
add_compile_options(-std=c++11)

#Project Name:
project (DubstepZombies)

include_directories(/usr/include/allegro5)

#BUILD ORDER
#Comment out any libaries not ready
add_library(ingame STATIC src/gamestate/ingame.cpp)
add_library(gamestate STATIC src/gamestate/gamestate.cpp)
add_library(titlescreen STATIC src/gamestate/titlescreen.cpp)
add_library(mallobject STATIC src/mall/mallobject.cpp)
add_library(malldraw STATIC src/mall/malldraw.cpp)
add_library(mallparser STATIC src/mall/mallparser.cpp)
add_library(playerdisplay STATIC src/character/playerdisplay.cpp)
add_library(player STATIC src/character/player.cpp)
add_library(gameobject STATIC src/utils/gameobject.cpp)
add_library(uuidz STATIC src/utils/uuidz.cpp)
add_library(gamemap STATIC src/utils/gamemap.cpp)
add_library(coord STATIC src/utils/coord.cpp)
add_library(drawutils STATIC src/drawutils/drawutils.cpp)
add_library(keyboard STATIC src/input/keyboard.cpp)
add_library(joystick STATIC src/input/joystick.cpp)
add_library(aicontrol STATIC src/input/aicontrol.cpp)
add_library(controller STATIC src/input/controller.cpp)
add_library(inputs STATIC src/input/inputs.cpp)

#Make an executable
add_executable(../bin/DZ src/launcher.cpp)
#Libraries that require other libraries
target_link_libraries(ingame gamestate)
target_link_libraries(ingame coord)
target_link_libraries(ingame mallparser)
target_link_libraries(ingame malldraw)
target_link_libraries(ingame gamemap)
target_link_libraries(ingame inputs)
target_link_libraries(ingame drawutils)
target_link_libraries(ingame mallobject)
target_link_libraries(ingame player)
target_link_libraries(ingame playerdisplay)
target_link_libraries(gamestate inputs)
target_link_libraries(gamestate drawutils)
target_link_libraries(titlescreen gamestate)
target_link_libraries(titlescreen ingame)
target_link_libraries(titlescreen inputs)
target_link_libraries(titlescreen drawutils)
target_link_libraries(mallobject coord)
target_link_libraries(malldraw coord)
target_link_libraries(mallparser malldraw)
target_link_libraries(mallparser mallobject)
target_link_libraries(playerdisplay coord)
target_link_libraries(playerdisplay player)
target_link_libraries(player coord)
target_link_libraries(player gameobject)
target_link_libraries(player controller)
target_link_libraries(player gamemap)
target_link_libraries(gameobject coord)
target_link_libraries(gameobject uuidz)
target_link_libraries(gamemap coord)
target_link_libraries(gamemap gameobject)
target_link_libraries(keyboard controller)
target_link_libraries(joystick controller)
target_link_libraries(aicontrol controller)
target_link_libraries(inputs controller)

#Link against it
target_link_libraries(../bin/DZ ingame)
target_link_libraries(../bin/DZ gamestate)
target_link_libraries(../bin/DZ titlescreen)
target_link_libraries(../bin/DZ mallobject)
target_link_libraries(../bin/DZ malldraw)
target_link_libraries(../bin/DZ mallparser)
target_link_libraries(../bin/DZ playerdisplay)
target_link_libraries(../bin/DZ player)
target_link_libraries(../bin/DZ gameobject)
target_link_libraries(../bin/DZ uuidz)
target_link_libraries(../bin/DZ gamemap)
target_link_libraries(../bin/DZ coord)
target_link_libraries(../bin/DZ drawutils)
target_link_libraries(../bin/DZ keyboard)
target_link_libraries(../bin/DZ joystick)
target_link_libraries(../bin/DZ aicontrol)
target_link_libraries(../bin/DZ controller)
target_link_libraries(../bin/DZ inputs)
target_link_libraries(../bin/DZ allegro)
target_link_libraries(../bin/DZ allegro_font)
target_link_libraries(../bin/DZ allegro_ttf)
target_link_libraries(../bin/DZ allegro_image)
target_link_libraries(../bin/DZ allegro_primitives)
